--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,8 @@ dist.jar=${dist.dir}/AbonnementFX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\GHADA\\Desktop\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
+file.reference.javax.mail.jar=..\\..\\..\\Downloads\\javax.mail.jar
+file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\GHADA\\Desktop\\mysql-connector-j-8.0.32.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -38,6 +39,7 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
+    ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector-j-8.0.32.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
