--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.datetime-picker-javafx-1.0.0.jar=C:\\Users\\Name\\Downloads\\Thnity\\Thnity\\dependencies\\datetime-picker-javafx-1.0.0.jar
 file.reference.itextpdf-5.5.9.jar=C:\\Users\\Name\\Downloads\\Thnity\\Thnity\\dependencies\\itextpdf-5.5.9.jar
+file.reference.javax.mail.jar=C:\\Users\\Name\\Documents\\NetBeansProjects\\FutureForge-Gestion_User\\depend\\javax.mail.jar
 file.reference.mysql-connector.jar=C:\\Users\\Name\\Downloads\\Thnity\\Thnity\\dependencies\\mysql-connector.jar
 file.reference.TrayTester.jar=C:\\Users\\Name\\Downloads\\Thnity\\Thnity\\dependencies\\TrayTester.jar
 includes=**
@@ -38,7 +39,8 @@ javac.classpath=\
     ${file.reference.TrayTester.jar}:\
     ${file.reference.datetime-picker-javafx-1.0.0.jar}:\
     ${file.reference.itextpdf-5.5.9.jar}:\
-    ${file.reference.mysql-connector.jar}
+    ${file.reference.mysql-connector.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
