--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,17 @@ dist.jar=${dist.dir}/EVenement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.JavaFileUploader.jar=..\\..\\..\\Desktop\\JavaFileUploader.jar
+file.reference.jcommon-1.0.23.jar=..\\..\\..\\Desktop\\jcommon-1.0.23.jar
 file.reference.jfoenix-8.0.8.jar=..\\..\\..\\Desktop\\jfoenix-8.0.8.jar
+file.reference.jfreechart-1.0.19-demo.jar=..\\..\\..\\Desktop\\jfreechart-1.0.19-demo.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.JavaFileUploader.jar}:\
-    ${file.reference.jfoenix-8.0.8.jar}
+    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
