--- a/RESERVATION/nbproject/project.properties
+++ b/RESERVATION/nbproject/project.properties
@@ -30,7 +30,13 @@ excludes=
 file.reference.Desktop-jar_files=../../Desktop/jar_files
 file.reference.fontawesomefx-8.5.jar=../../Desktop/fontawesomefx-8.5.jar
 file.reference.fontawesomefx-8.5.jar-1=../../../Koussay/Downloads/fontawesomefx-8.5.jar
+file.reference.fontawesomefx-8.5.jar-2=C:\\Users\\LENOVO\\Desktop\\fontawesomefx-8.5.jar
+file.reference.javax.mail-1.6.2.jar=C:\\Users\\LENOVO\\Downloads\\javax.mail-1.6.2.jar
+file.reference.mapjfx-2.8.0-12.jar=C:\\Users\\LENOVO\\Downloads\\mapjfx-2.8.0-12.jar
+file.reference.TrayNotification.jar=C:\\Users\\LENOVO\\Downloads\\TrayNotification.jar
+file.reference.TrayTester.jar=C:\\Users\\LENOVO\\Downloads\\TrayTester.jar
 file.reference.twilio-9.1.0-jar-with-dependencies.jar=../twilio-9.1.0-jar-with-dependencies.jar
+file.reference.twilio-9.1.0-jar-with-dependencies.jar-1=C:\\Users\\LENOVO\\Downloads\\twilio-9.1.0-jar-with-dependencies.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -38,7 +44,13 @@ javac.classpath=\
     ${file.reference.Desktop-jar_files}:\
     ${file.reference.fontawesomefx-8.5.jar}:\
     ${file.reference.fontawesomefx-8.5.jar-1}:\
-    ${file.reference.twilio-9.1.0-jar-with-dependencies.jar}
+    ${file.reference.twilio-9.1.0-jar-with-dependencies.jar}:\
+    ${file.reference.twilio-9.1.0-jar-with-dependencies.jar-1}:\
+    ${file.reference.fontawesomefx-8.5.jar-2}:\
+    ${file.reference.mapjfx-2.8.0-12.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.TrayNotification.jar}:\
+    ${file.reference.TrayTester.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
